# ESP32_DeviceBridge

./: CMakeLists.txt  README.md  sdkconfig.defaults
html/: index.html  style.css  wifi_config.html
main/: CMakeLists.txt  Kconfig  app_main.c  idf_component.yml  nvs_utils.c  nvs_utils.h  webui.c  webui.h  wifi.c  wifi.h  zigbee.c  zigbee.h
